# convoy-data-pipeline

./: pyproject.toml
code/create-db/: 1_initial_load.py  2_enrich_ur_conversation_ids.py  3_create_tweet_stats_i.py  4_create_tweets_a.py  5_create_conversation_tables.py  6_copy_tables_to_columnstore.py
code/fetch-conversations/: extract_conversation_ids.py  fetch_conversation_tweets.py
